made data_grouping more consistent

--- a/data_grouping.ipynb
+++ b/data_grouping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,20 +24,16 @@
     "                entry[column] = row[column]\n",
     "            else:\n",
     "                marker_value = row[column]\n",
-    "\n",
     "        if marker_value not in grouped_data.keys():\n",
-    "            grouped_data[marker_value] = entry\n",
-    "        else:\n",
-    "            if \"subsets\" not in grouped_data[marker_value].keys():\n",
-    "                grouped_data[marker_value][\"subsets\"] = []\n",
-    "            grouped_data[marker_value][\"subsets\"].append(entry)\n",
+    "            grouped_data[marker_value] = np.array([])\n",
+    "        grouped_data[marker_value] = np.append(grouped_data[marker_value], entry)\n",
     "        \n",
     "    return grouped_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
