added correlation matrix

--- a/data_grouping.ipynb
+++ b/data_grouping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,21 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  0\n",
-      "Rows (original)  19\n",
-      "Rows (grouped)   15\n",
-      "Duplicates        4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Load example data and group together entries with like markers\n",
     "sample_data = pd.read_csv(\"./shoes.csv\")\n",
     "marker = \"IDNUM\"\n",
     "workable_data = groupData(marker, sample_data)\n",
@@ -56,8 +46,22 @@
     "    'Rows (grouped)' : len(workable_data.keys()),\n",
     "    'Duplicates' : sample_data.shape[0] - len(workable_data.keys())\n",
     "    }\n",
-    "\n",
-    "print(pd.DataFrame(data = d, index=[0]).transpose())\n"
+    "    \n",
+    "print(pd.DataFrame(data = d, index=[0]).transpose())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Find correlation matrix of data entries\n",
+    "import matplotlib.pyplot as plt\n",
+    "correllations = pd.get_dummies(sample_data).corr()\n",
+    "print(correllations)\n",
+    "plt.matshow(correllations)\n",
+    "plt.show()"
    ]
   }
  ],
