--- a/auto_correlate.ipynb
+++ b/auto_correlate.ipynb
@@ -106,7 +106,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example"
+    "## Example\n",
+    "Data about cars is imported from the UC Irvine ML data library and the functions above are run on it. The output is plotted."
    ]
   },
   {
