--- a/simple_tools/auto_correlate.ipynb
+++ b/simple_tools/auto_correlate.ipynb
@@ -14,6 +14,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "############################################################################\n",
+    "#            COPYRIGHT (C) YASSIN KORTAM - ALL RIGHTS RESERVED             #\n",
+    "# UNAUTHORIZED COPYING OF THIS FILE, VIA ANY MEDIUM IS STRICTLY PROHIBITED #\n",
+    "#                       PROPRIETARY AND CONFIDENTIAL                       #\n",
+    "#    WRITTEN BY YASSIN KORTAM <YASSINKORTAM@G.UCLA.EDU>, MARCH 2023        #\n",
+    "############################################################################\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
